# Horizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shader.bat  compile_shaders.sh  compileandrun.py  shadercompiler.py
extra-libs-unrelated/octree/src/: main.cpp  myrandom.h  octree.h
shaders/: example_test_render_camera.vert  example_test_texture.frag  example_test_texture.vert  example_triangle.frag  example_triangle.vert  example_triangle_2.vert  model.frag  model.vert  point_light.frag  point_light.vert
src/: app.cpp  app.h  debug.h  horizon_mesh.cpp  horizon_window.cpp  horizon_window.h  main.cpp
src/core/: debug.h  ecs.h  horizon_camera.cpp  horizon_camera.h  horizon_components.h  horizon_controller.cpp  horizon_controller.h  horizon_mesh.cpp  horizon_mesh.h  horizon_model.cpp  horizon_model.h  horizon_transform.h  horizon_window.cpp  horizon_window.h
src/core/octree/: CMakeLists.txt
src/gfx/: horizon_buffer.cpp  horizon_buffer.h  horizon_descriptor.cpp  horizon_descriptor.h  horizon_device.cpp  horizon_device.h  horizon_pipeline.cpp  horizon_pipeline.h  horizon_renderer.cpp  horizon_renderer.h  horizon_swapchain.cpp  horizon_swapchain.h  horizon_texture.cpp  horizon_texture.h
src/gfx/core/: horizon_buffer.cpp  horizon_buffer.h  horizon_device.cpp  horizon_device.h  horizon_pipeline.cpp  horizon_pipeline.h  horizon_renderer.cpp  horizon_renderer.h  horizon_swapchain.cpp  horizon_swapchain.h
src/gfx/render_systems/: horizon_test_triangle.h
src/render_systems/: horizon_imgui_render_system.cpp  horizon_imgui_render_system.h  horizon_model_renderer.h  horizon_point_light_renderer.h  horizon_test_render_camera.h  horizon_test_texture_renderer.h  horizon_test_triangle.h  horizon_test_triangle_2.h
src/utils/: horizon_helper.cpp  horizon_helper.h
